# swiftpdf

./: .gitignore  README.md  hello.py  pyproject.toml
backend/: manage.py
backend/core/: minio.py  models.py  serializers.py  settings.py  urls.py  views.py
backend/core/migrations/: 0001_initial.py
backend/swiftpdf/: apps.py  asgi.py  constants.py  helper.py  minio.py  models.py  publisher.py  serializers.py  settings.py  setup.py  urls.py  utils.py  views.py  wsgi.py
backend/swiftpdf/management/commands/: run_listener.py  setup_rabbitmq.py
backend/swiftpdf/messaging/: listener.py  publisher.py
backend/swiftpdf/migrations/: 0001_initial.py
backend/swiftpdf/services/: minio.py  rabbitmq.py
backend/worker/: main.py  pdf_utils.py  worker.py
backend/worker/management/commands/: run_worker.py
docs/demo-core/: pdf_processing.py
docs/demo-minio/: client.py  demo.py  presigned_url.py
docs/demo-pika/: confirm_deliery.py  consumer.py  direct_reply_to.py  fix_heartbeat.py  heartbeat.py  mandatory.py
docs/demo-queue/: init.py  publisher.py
docs/drafts/: README.md  worker.py
docs/drafts/detect_mocks/: detect.py  utils.py
