[project]
name = "swiftpdf"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "django>=5.1.6",
    "djangorestframework>=3.15.2",
    "minio>=7.2.15",
    "nanoid>=2.0.0",
    "pika>=1.3.2",
    "pymupdf>=1.25.3",
    "python-dotenv>=1.0.1",
    "rabbitpy>=2.0.1",
]
